# employee-app-fastapi

./: .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 199d17b9f4d0_create_missing_department_table.py  1f0ec87444c1_emp_dept_junction.py  31ea16f621c9_created_department_table.py  77a338c933b7_init.py  a97f933d9e86_emp_dept_junction_edit.py  ae851f5533a9_employee_roles_update.py  e2a16ff0dbd2_add_password_hash.py  e4f7c1716883_created_address_table.py  e73bdc3a8a6c_initial.py
auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
database/: connection.py
department/: repo.py  router.py  schemas.py  service.py
employees/: repo.py  router.py  schemas.py  service.py
exceptions/: __init__.py  handler.py
middleware/: logger.py
models/: __init__.py  address.py  department.py  employee.py  employee_dept.py
tests/: conftest.py  test_employee_api.py  test_employee_get_by_id.py  test_employee_service.py  test_exception.py  test_smoke.py
